fix modal and carousel z-index

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -1,6 +1,6 @@
 .modal-mask {
   position: fixed;
-  z-index: 9998;
+  z-index: 100000;
   top: 0;
   left: 0;
   width: 100%;
@@ -22,7 +22,7 @@
   padding: 20px 30px;
   background-color: #fff;
   border-radius: 2px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
+  box-shadow: 0 2px 8px rgba(104, 81, 81, 0.33);
   transition: all .3s ease;
   font-family: Helvetica, Arial, sans-serif;
 }
