--- a/src/styles/ourheritage.scss
+++ b/src/styles/ourheritage.scss
@@ -48,6 +48,8 @@
       }
       p {
         font-size: 1.25rem;
+        width: 85%;
+        margin-left: 7.5%;
       }
     }
   }
